--- a/interface/static/tpl/feed-thumb.jade
+++ b/interface/static/tpl/feed-thumb.jade
@@ -1,3 +1,4 @@
+include ../../jade/config
 include ../../jade/mixins
-- item = {user: {}, object: {releasedate: ""}}
+- item = {user: {}, object: {releasedate: ""}, type: ""}
 mixin feed_thumb(item, true)
