--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -4,9 +4,9 @@ footer(role='contentinfo')
             .row
                 .col-md-3.block-footer
                     a(href='/', title='')
-                        img(src='static/img/logo-footer.png', alt='')
+                        img(src=img_url + 'logo-footer.png', alt='')
                 .col-md-6.block-footer
-                    ul.menu-footer
+                    //ul.menu-footer
                         li
                             a(href='/legal', title='Правовая информация') Правовая информация
                         li
@@ -14,17 +14,17 @@ footer(role='contentinfo')
                 .col-md-3.block-footer
                     ul.menu-soc
                         li
-                            a(href='#', title='')
-                                img(src='static/img/i-fb.png', alt='')
+                            a(href='https://www.facebook.com/vseviru', title='')
+                                img(src=img_url + 'i-fb.png', alt='')
                         li
-                            a(href='#', title='')
-                                img(src='static/img/i-tw.png', alt='')
+                            a(href='https://twitter.com/vseviru', title='')
+                                img(src=img_url + 'i-tw.png', alt='')
                         li
-                            a(href='#', title='')
-                                img(src='static/img/i-rss.png', alt='')
+                            a(href='http://vsevi.ru/rss/', title='')
+                                img(src=img_url + 'i-rss.png', alt='')
                         li
-                            a(href='#', title='')
-                                img(src='static/img/i-vk.png', alt='')
+                            a(href='http://vk.com/vsevi', title='')
+                                img(src=img_url + 'i-vk.png', alt='')
         //
            .top-footer
         .bottom-footer
@@ -71,16 +71,16 @@ footer(role='contentinfo')
                             ul.soc-hor
                                 li
                                     a(href='/login/vk-oauth', title='')
-                                        img(src='static/img/i-vk-b.png', alt='')
+                                        img(src=img_url + 'i-vk-b.png', alt='')
                                 li
                                     a(href='/login/facebook', title='')
-                                        img(src='static/img/i-fb-b.png', alt='')
+                                        img(src=img_url + 'i-fb-b.png', alt='')
                                 li
                                     a(href='/login/twitter', title='')
-                                        img(src='static/img/i-tw-b.png', alt='')
+                                        img(src=img_url + 'i-tw-b.png', alt='')
                                 li
                                     a(href='/login/google-oauth2', title='')
-                                        img(src='static/img/i-go-b.png', alt='')
+                                        img(src=img_url + 'i-go-b.png', alt='')
                         //
                            .wrap-popup-content
                     #enter.tab-pane
@@ -103,32 +103,27 @@ footer(role='contentinfo')
                             ul.soc-hor
                                 li
                                     a(href='/login/vk-oauth', title='')
-                                        img(src='static/img/i-vk-b.png', alt='')
+                                        img(src=img_url + 'i-vk-b.png', alt='')
                                 li
                                     a(href='/login/facebook', title='')
-                                        img(src='static/img/i-fb-b.png', alt='')
+                                        img(src=img_url + 'i-fb-b.png', alt='')
                                 li
                                     a(href='/login/twitter', title='')
-                                        img(src='static/img/i-tw-b.png', alt='')
+                                        img(src=img_url + 'i-tw-b.png', alt='')
                                 li
                                     a(href='/login/google-oauth2', title='')
-                                        img(src='static/img/i-go-b.png', alt='')
+                                        img(src=img_url + 'i-go-b.png', alt='')
                         //
                            .wrap-popup-content
             //
                .wrap-popup-content
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
-script(src='static/js/bootstrap.min.js')
-script(src='static/js/jquery.rateit.min.js')
-script(src='static/js/imagesloaded.js')
-script(src='static/js/config.js')
-script(src='static/js/mi.helper.js')
-script(src='static/js/mi.rest.js')
-script(src='static/js/app1.js')
-//
-                    script(src='static/js/jquery.carouFredSel-6.2.1-packed.js')
-                    script(src='static/js/helper-caroufredsel/jquery.ba-throttle-debounce.min.js')
-                    script(src='static/js/helper-caroufredsel/jquery.mousewheel.min.js')
-                    script(src='static/js/helper-caroufredsel/jquery.touchSwipe.min.js')
-                    script(src='static/js/helper-caroufredsel/jquery.transit.min.js')
-                    script(src='/static/js/custom.js')
+script(src=js_url + 'bootstrap.min.js')
+script(src=js_url + 'jquery.rateit.min.js')
+script(src=js_url + 'imagesloaded.js')
+script(src=js_url + 'config.js')
+script(src=js_url + 'mi.helper.js')
+script(src=js_url + 'mi.rest.js')
+script(src=js_url + 'app1.js')
+if IN_PRODUCTION
+    |<!-- Yandex.Metrika counter --><script type="text/javascript">(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter25453334 = new Ya.Metrika({id:25453334, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/25453334" style="position:absolute; left:-9999px;" alt="" /></div></noscript><!-- /Yandex.Metrika counter -->
