--- a/interface/jade/head.jade
+++ b/interface/jade/head.jade
@@ -4,12 +4,19 @@ head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title!="ВсеВидео &mdash; " + page_title
-    link(href='static/css/bootstrap.min.css', rel='stylesheet')
-    link(href='static/css/bootstrap-theme.css', rel='stylesheet')
-    link(href='static/css/custom.css', rel='stylesheet')
-    link(href='static/css/rateit.css', rel='stylesheet')
-    link(href='static/css/uniform.default.min.css', rel='stylesheet')
-    //if lt IE 9
-        script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-        script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
+    if (meta)
+        each item in meta
+            - params = ""
+            |!{"<meta " + item + "/>"}
+    - title = page_title_full?page_title_full:(page_title?page_title + " &mdash; ":"") + "Все видео: онлайн просмотр глобальный видео-архив фильмов, сериалов, видео-трансляций, ТВ"
+    title!=title
+    - meta_keywords = page_keywords || "смотри смотреть онлайн бесплатно фильмы без регистрации скачать фильм фильмы бесплатные кино новинки 2014 (тут указывать текущий год) в хорошем качестве сериалы серии сериал сезон спортивные трансляции просмотр ТВ футбол"
+    - meta_descr = page_description || "У нас на сайте вы можете найти новинки фильмов в хорошем качестве или HD быстро и без регистрации. Фильмы в HD качестве и DVDRip. Каждый день новые добавления. У нас можно найти что посмотреть сегодня вечером и получить уведомления о появлении новых серий и фильмов в интернет. Больше не нужно ждать когда появится фильм онлайн, можно подписаться на уведомление о выходе."
+    meta(name="keywords",content=meta_keywords)
+    meta(name="description",content=meta_descr)
+    link(href=css_url + 'bootstrap.min.css', rel='stylesheet')
+    link(href=css_url + 'bootstrap-theme.css', rel='stylesheet')
+    link(href=css_url + 'custom.css', rel='stylesheet')
+    link(href=css_url + 'rateit.css', rel='stylesheet')
+    link(href=css_url + 'uniform.default.min.css', rel='stylesheet')
+    link(rel="icon",type="image/png",href="/favicon.png")
