--- a/interface/jade/page_account.jade
+++ b/interface/jade/page_account.jade
@@ -1,3 +1,4 @@
+include config
 - page_title = "Профиль"
 include mixins
 include head
@@ -10,7 +11,7 @@ body
                     .row
                         .col-md-3
                             .person-img
-                                img.img-circle(src='static/img/content/img16.png', alt='')
+                                img.img-circle(src=img_url + 'content/img16.png', alt='')
                                 .change-img
                                     input(type='file')
                             //
@@ -30,60 +31,60 @@ body
                                     h2 Настройки уведомлений
                                     ul.list-profile
                                         li
-                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_vid_new,name='ntf_vid_new')
-                                            | Появление нового видео в списке подписок
+                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_vid_new,name='ntf_vid_new')#ntf_vid_new
+                                            label(for="ntf_vid_new") Появление нового видео в списке подписок
                                         li
-                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_vid_director,name='ntf_vid_director')
-                                            | Появление кино определённого режисёра / с определённым актёром
+                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_vid_director,name='ntf_vid_director')#ntf_vid_director
+                                            label(for="ntf_vid_director") Появление кино определённого режисёра<br/>или с определённым актёром
                                         li
-                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_rate,name='ntf_frnd_rate')
-                                            | Новые оценки ваших друзей
+                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_rate,name='ntf_frnd_rate')#ntf_frnd_rate
+                                            label(for="ntf_frnd_rate") Новые оценки ваших друзей
                                         li
-                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_comment,name='ntf_frnd_comment')
-                                            | Новые комментарии ваших друзей
+                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_comment,name='ntf_frnd_comment')#ntf_frnd_comment
+                                            label(for="ntf_frnd_comment") Новые комментарии ваших друзей
                                         li
-                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_subscribe,name='ntf_frnd_subscribe')
-                                            | Новые подписки ваших друзей
+                                            input.checkbox-default(type='checkbox',value=1,checked=user.ntf_frnd_subscribe,name='ntf_frnd_subscribe')#ntf_frnd_subscribe
+                                            label(for="ntf_frnd_subscribe") Новые подписки ваших друзей
                                         li
                                             - freq = user.ntf_frequency
                                             - if (freq != 0 && freq != 7) freq = 1
                                             | Присылать уведомление
                                             ul
                                                 li
-                                                    input.radio-default(name='ntf_frequency', type='radio', value='1',checked=freq == 1)
-                                                    span один раз в день
+                                                    input.radio-default(name='ntf_frequency', type='radio', value='1',checked=freq == 1)#ntf_frequency1
+                                                    label(for="ntf_frequency1") один раз в день
                                                 li
-                                                    input.radio-default(name='ntf_frequency', type='radio', value='7',checked=freq == 7)
-                                                    span один раз в неделю
+                                                    input.radio-default(name='ntf_frequency', type='radio', value='7',checked=freq == 7)#ntf_frequency7
+                                                    label(for="ntf_frequency7") один раз в неделю
                                                 li
-                                                    input.radio-default(name='ntf_frequency', type='radio', value='0',checked=freq == 0)
-                                                    span никогда
+                                                    input.radio-default(name='ntf_frequency', type='radio', value='0',checked=freq == 0)#ntf_frequency0
+                                                    label(for="ntf_frequency0") никогда
                                     h2 Настройки приватности
                                     - pvt_values = {0: "видны всем", 1: "видны только друзьям", 2: "видны только мне"}
                                     ul#pvt_selector.display-none
                                         each el,key in pvt_values
                                             li
-                                                input.radio-default(name='pvt_group', type='radio', value=key)
-                                                span(class="value" + key)=el
+                                                input.radio-default(name='pvt_group', type='radio', value=key,id="pvt_values" + key)
+                                                label(for="pvt_values" + key,class="value" + key)=el
                                     ul.list-profile#pvt_list
                                         li
-                                            | Мои подписки
+                                            | Мои подписки&nbsp;
                                             input(name="pvt_subscribes", value=user.pvt_subscribes || 0).value
                                             a(href='#', title='')=pvt_values[user.pvt_subscribes || 0]
                                         li
-                                            | Мои друзья
+                                            | Мои друзья&nbsp;
                                             input(name="pvt_friends", value=user.pvt_friends || 0).value
                                             a(href='#', title='')=pvt_values[user.pvt_friends || 0]
                                         li
-                                            | Мои любимые жанры
+                                            | Мои любимые жанры&nbsp;
                                             input(name="pvt_genres", value=user.pvt_genres || 0).value
                                             a(href='#', title='')=pvt_values[user.pvt_genres || 0]
                                         li
-                                            | Мои любимые актеры
+                                            | Мои любимые актеры&nbsp;
                                             input(name="pvt_actors", value=user.pvt_actors || 0).value
                                             a(href='#', title='')=pvt_values[user.pvt_actors || 0]
                                         li
-                                            | Мои любимые режиссёры
+                                            | Мои любимые режиссёры&nbsp;
                                             input(name="pvt_directors", value=user.pvt_directors || 0).value
                                             a(href='#', title='')=pvt_values[user.pvt_directors || 0]
                                     h2 Аккаунты в соц. сетях
@@ -91,42 +92,42 @@ body
                                         li
                                             if user.social.facebook
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-fb.png', alt='')
+                                                    img(src=img_url + 'i-fb.png', alt='')
                                                     | facebook.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-fb.png', alt='')
+                                                    img(src=img_url + 'i-fb.png', alt='')
                                                     span Привязать
                                         li
                                             if user.social.twitter
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-tw.png', alt='')
+                                                    img(src=img_url + 'i-tw.png', alt='')
                                                     | twitter.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-tw.png', alt='')
+                                                    img(src=img_url + 'i-tw.png', alt='')
                                                     span Привязать
                                         li
                                             if user.social.vk
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-vk.png', alt='')
+                                                    img(src=img_url + 'i-vk.png', alt='')
                                                     | vk.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-vk.png', alt='')
+                                                    img(src=img_url + 'i-vk.png', alt='')
                                                     span Привязать
                                         li
                                             if user.social.gplus
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-go.png', alt='')
+                                                    img(src=img_url + 'i-go.png', alt='')
                                                     | plus.google.com/vasiliev
                                                 a.block.i-close.sprite.sprite-i-close.fright(href='#')
                                             else
                                                 a(href='#', title='')
-                                                    img(src='static/img/i-go.png', alt='')
+                                                    img(src=img_url + 'i-go.png', alt='')
                                                     span Привязать
                                     .form-group
                                         .col-sm-10
@@ -140,6 +141,6 @@ body
                     //
                        .content
         include footer
-    script(src='static/js/jquery.uniform.min.js')
+    script(src=js_url + 'jquery.uniform.min.js')
     script.
         $(document).ready(function () {window.InitApp({}, "Account")})
