--- a/interface/jade/page_feed.jade
+++ b/interface/jade/page_feed.jade
@@ -1,3 +1,4 @@
+include config
 - page_title = "Лента"
 include mixins
 include head
@@ -17,7 +18,7 @@ body
                                 a(href='#', title='') загрузить еще
                             //
                                .filter-content
-                            img.img-responsive(src='static/img/shd-big.png', alt='')
+                            img.img-responsive(src=img_url + 'shd-big.png', alt='')
                             //
                                .filter-block
                     //
