--- a/interface/jade/page_index.jade
+++ b/interface/jade/page_index.jade
@@ -1,9 +1,10 @@
 - is_main = true
 - filter_year_old = {0: "все фильмы", 1: "этого года", 3: "самые свежие", 8: "свежие", 15: "новые", 20: "не старые"}
-- filter_price = {0: "бесплатно", 50: "до 50 рублей", 100: "до 100 рублей", 200: "до 200 рублей", 9999: "любая стоимость"}
-- filter_rating = {0: "любой рейтинг", 5: "включая плохие", 6: "неплохие", 6.5: "хорошие", 7: "отличные", 8: "самые лучшие"}
+- filter_price = [[9999, "любая стоимость"], [0, "бесплатно"], [50, "до 50 рублей"], [100, "до 100 рублей"], [200, "до 200 рублей"]]
+- filter_rating = [[0, "любой рейтинг"], [5, "включая плохие"], [6, "неплохие"], [6.5, "хорошие"], [7, "отличные"], [8, "самые лучшие"]]
 - filter_sort = {"rating": "по рейтингу", "subscribes": "по подписчикам"}
 - page_title = "агрегатор всех онлайн-кинотеатров"
+include config
 include mixins
 include head
 body
@@ -24,51 +25,57 @@ body
                         .filter-content.style-panel-action.rel.zmin
                             .row
                                 .col-md-9
-                                    ul.sort-list.center-sort
+                                    ul.sort-list
                                         li#filter_genres
                                             a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
                                                 span все жанры
                                             ul.dropdown-menu
                                                 li
-                                                    a(href='#' + i, title='',data-mi-id=0) все жанры
+                                                    a(href='?genres=0', title='',data-mi-id=0) все жанры
                                                 each item in filter_genres.sort(function (a,b){return a.order - b.order})
                                                     li
-                                                        a(href='?genre=' + item.id, title='',data-mi-id=item.id)=item.name
+                                                        - url_tmp = "?genres=" + i
+                                                        a(href=url_tmp, title='',data-mi-id=item.id)=item.name
                                         li#filter_rating
                                             a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
                                                 span=filter_rating[0]
                                             ul.dropdown-menu
-                                                each item, i in filter_rating
+                                                each item in filter_rating
                                                     li
-                                                        a(href='?rating=' + i, title='',data-mi-id=i)=item
+                                                        - url_tmp = "?rating=" + item[0]
+                                                        a(href=url_tmp, title='',data-mi-id=i)=item[1]
                                         li#filter_price
-                                            a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
-                                                span=filter_price[0]
+                                            - url_tmp = '?price=' + filter_price[0][0]
+                                            a.sprite.sprite-i-toggle-bottom(href=url_tmp, data-toggle='dropdown', title='')
+                                                span=filter_price[0][1]
                                             ul.dropdown-menu
-                                                each item, i in filter_price
+                                                each item in filter_price
                                                     li
-                                                        a(href='?price=' + i, title='',data-mi-id=i)=item
+                                                        - url_tmp = "?price=" + item[0]
+                                                        a(href=url_tmp, title='',data-mi-id=i)=item[1]
                                         li#filter_year_old
                                             a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
                                                 span=filter_year_old[0]
                                             ul.dropdown-menu
                                                 each item, i in filter_year_old
                                                     li
-                                                        a(href='?year=' + i, title='',data-mi-id=i)=item
+                                                        - url_tmp = "?year_old=" + i
+                                                        a(href=url_tmp, title='',data-mi-id=i)=item
                                 .col-md-3
-                                    ul.sort-list.center-sort.nobg
+                                    ul.sort-list.right-sort.nobg
                                         //li
                                             strong cортировать:
                                         li#filter_sort
-                                            a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
+                                            a.sprite.sprite-i-toggle-bottom(href='?sort=subscribes', data-toggle='dropdown', title='')
                                                 span по подписчикам
-                                            ul.dropdown-menu
+                                            ul.dropdown-menu.dropdown-menu-right
                                                 each item, i in filter_sort
                                                     li
-                                                        a(href='?sort=' + i, title='',data-mi-id=i)=item
+                                                        - url_tmp = "?sort=" + i
+                                                        a(href=url_tmp, title='',data-mi-id=i)=item
                         //
                            .filter-content
-                        img.img-responsive(src='static/img/shd-big.png', alt='')
+                        img.img-responsive(src=img_url + 'shd-big.png', alt='')
                     //
                        .filter-block
                     .list-film
@@ -79,10 +86,10 @@ body
                        .list-film
                     .add-filter#films_more
                         .add-content.style-panel-action.rel.zmin
-                            a(href='#') мало, хочу еще фильмы
+                            a(href='#') мало, хочу еще фильмов
                         //
                            .filter-content
-                        img.img-responsive(src='static/img/shd-big.png', alt='')
+                        img.img-responsive(src=img_url + 'shd-big.png', alt='')
                     //
                        .filter-block
             if comments && comments.length
@@ -96,7 +103,8 @@ body
                                         each item,i in comments
                                             .col-md-4.col-sm-6
                                                 .block-text.rel.zmin
-                                                    a(href=item.film.id, title='')=item.film.name
+                                                    - url_tmp = '/films/' + item.film.id + '/'
+                                                    a(href=url_tmp, title='')=item.film.name
                                                     .mark
                                                         strong Оценка:
                                                         |#{item.film.rating}
@@ -105,8 +113,10 @@ body
                                                 //
                                                    .block-text
                                                 .person-text.rel
-                                                    img(src=item.user.avatar || "static/img/noavatar.png", alt='')
-                                                    a(href='#', title='')=item.user.name
+                                                    - avatar = item.user.avatar || noavatar_url
+                                                    img(src=avatar, alt='')
+                                                    - url_tmp = '/users/' + item.user.id + '/'
+                                                    a(href=url_tmp, title='')=item.user.name
                                                     i=item.user.city || ""
                                                 //
                                                    .person-text
