--- a/interface/jade/page_login.jade
+++ b/interface/jade/page_login.jade
@@ -1,3 +1,4 @@
+include config
 - page_title = "Логин"
 include head
 body
@@ -13,11 +14,12 @@ body
                                 p C помощью E-mail
                                 form.form-horizontal(role='form', method='post')
                                     input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
-                                    .form-group(class=error?"has-error":"")
+                                    - error_cls = error?"has-error":""
+                                    .form-group(class=error_cls)
                                         label.col-sm-2.control-label(for='inputEmail3') Email
                                         .col-sm-10
                                             input#inputEmail3.form-control(type='email', name='username')
-                                    .form-group(class=error?"has-error":"")
+                                    .form-group(class=error_cls)
                                         label.col-sm-2.control-label(for='inputPassword3') Пароль
                                         .col-sm-10
                                             input#inputPassword3.form-control(type='password', name='password')
@@ -34,19 +36,19 @@ body
                                 ul
                                     li
                                         a(href='/login/vk-oauth', title='Вконтакте')
-                                            img(src='static/img/i-vk-b.png', alt='')
+                                            img(src=img_url + 'i-vk-b.png', alt='')
                                             | ВКонтакте
                                     li
                                         a(href='/login/facebook', title='Facebook')
-                                            img(src='static/img/i-fb-b.png', alt='')
+                                            img(src=img_url + 'i-fb-b.png', alt='')
                                             | Facebook
                                     li
                                         a(href='/login/twitter', title='Twitter')
-                                            img(src='static/img/i-tw-b.png', alt='')
+                                            img(src=img_url + 'i-tw-b.png', alt='')
                                             | Twitter
                                     li
                                         a(href='/login/google-oauth2', title='Google+')
-                                            img(src='static/img/i-go-b.png', alt='')
+                                            img(src=img_url + 'i-go-b.png', alt='')
                                             | Google +
                             //
                                .more-enter
