--- a/interface/jade/page_person.jade
+++ b/interface/jade/page_person.jade
@@ -1,3 +1,4 @@
+include config
 - roles = ""
 - if (person.roles && person.roles.length) {
 -   delim = false
@@ -20,9 +21,10 @@ body
                         .col-md-3.col-sm-4.col-xs-12
                             .person-img-full
                                 .img-person
-                                    img(src=person.photo || "static/img/nophoto-big.png", alt='')
+                                    - url_tmp = person.photo || noperson_url
+                                    img(src=url_tmp, alt='')
                                     br
-                                    img(src='static/img/shd-small.png', alt='')
+                                    img(src=img_url + 'shd-small.png', alt='')
                                 a.btn-green.btn-def.block.margin0a(href='#', title='')#subscribe подписаться
                             //
                                .person-img-full
@@ -30,7 +32,7 @@ body
                             .person-info
                                 .person-name
                                     h2=person.name
-                                    if person.name_orig
+                                    if person.name_orig && person.name_orig != person.name
                                         span=person.name_orig
                                 //
                                    .person-name
@@ -51,10 +53,11 @@ body
                                                 - delim = true
                                     li
                                         span Дата рождения
-                                        |#{date_text_str(person.birthdate)} #{person.years_old} #{cardinal(person.years_old, "год", "года", "лет")}
-                                .person-text-short
-                                    h3 Биография
-                                    p!=person.bio
+                                        |#{date_text_str(person.birthdate)}, #{how_long_str(person.birthdate)}
+                                if person.bio
+                                    .person-text-short
+                                        h3 Биография
+                                        p!=person.bio
                                     ////
                                         #hidden-text.none
                                             p Скрытый текст
@@ -80,7 +83,7 @@ body
                                         a(href='') мало, Хочу еще фильмы
                                     //
                                        .filter-content
-                                    img.img-responsive(src='static/img/shd-big.png', alt='')
+                                    img.img-responsive(src=img_url + 'shd-big.png', alt='')
                                 //
         include footer
         - delete person.bio; delete person.filmography
