--- a/interface/jade/page_register.jade
+++ b/interface/jade/page_register.jade
@@ -1,3 +1,4 @@
+include config
 - page_title = "Регистрация"
 include head
 body
@@ -13,19 +14,22 @@ body
                                 p C помощью почты
                                 form.form-horizontal(role='form',method='post')
                                     input(type="hidden",name="csrfmiddlewaretoken",value=csrf_token)
-                                    .form-group(class=error && error.email?"has-error":"")
+                                    - error_cls = error && error.email?"has-error":""
+                                    .form-group(class=error_cls)
                                         label.col-sm-4.control-label(for='inputEmail3') Email
                                         .col-sm-8
                                             input#inputEmail3.form-control(type='email',name='email')
                                             if error && error.email
                                                 p=error.email
-                                    .form-group(class=error && error.password?"has-error":"")
+                                    - error_cls = error && error.password?"has-error":""
+                                    .form-group(class=error_cls)
                                         label.col-sm-4.control-label(for='inputPassword3') Пароль
                                         .col-sm-8
                                             input#inputPassword3.form-control(type='password',name='password')
                                             if error && error.password
                                                 p=error.password
-                                    .form-group(class=error && error.password2?"has-error":"")
+                                    - error_cls = error && error.password2?"has-error":""
+                                    .form-group(class=error_cls)
                                         label.col-sm-4.control-label(for='inputPassword4') Повторите пароль
                                         .col-sm-8
                                             input#inputPassword4.form-control(type='password',name='password2')
@@ -42,19 +46,19 @@ body
                                 ul
                                     li
                                         a(href='/login/vk-oauth', title='')
-                                            img(src='static/img/i-vk-b.png', alt='')
+                                            img(src=img_url + 'i-vk-b.png', alt='')
                                             | ВКонтакте
                                     li
                                         a(href='/login/facebook', title='')
-                                            img(src='static/img/i-fb-b.png', alt='')
+                                            img(src=img_url + 'i-fb-b.png', alt='')
                                             | Facebook
                                     li
                                         a(href='/login/twitter', title='')
-                                            img(src='static/img/i-tw-b.png', alt='')
+                                            img(src=img_url + 'i-tw-b.png', alt='')
                                             | Twitter
                                     li
                                         a(href='/login/google-oauth2', title='')
-                                            img(src='static/img/i-go-b.png', alt='')
+                                            img(src=img_url + 'i-go-b.png', alt='')
                                             | Google +
                             //
                                .more-enter
