--- a/interface/jade/page_user.jade
+++ b/interface/jade/page_user.jade
@@ -1,3 +1,4 @@
+include config
 - page_title = "Профиль " + user.name
 include mixins
 include head
@@ -10,7 +11,8 @@ body.page-profile
                     .row.block-profile-me
                         .col-md-3
                             .person-img
-                                img.img-circle(src=user.avatar || "static/img/noavatar.png", alt='')
+                                - url_tmp = user.avatar || noavatar_url
+                                img.img-circle(src=url_tmp, alt='')
                                 br
                                 a.btn-yellow3.rel.zmin(href='#', title='')#friendship Добавить в друзья
                             //
@@ -21,7 +23,7 @@ body.page-profile
                                 ul.list-profile
                                     li
                                         i На сайте
-                                        span=how_long(new Date(user.regdate), 1)
+                                        span=how_long_str(new Date(user.regdate), 1)
                                     if user.friends_cnt
                                         li
                                             i Друзей
@@ -34,7 +36,7 @@ body.page-profile
                                         li
                                             i Оставил комментариев
                                             span=user.comments_cnt
-                                    if user.genre_fav
+                                    if user.genre_fav && user.genre_fav.name
                                         li
                                             i Любимый жанр
                                             span=user.genre_fav.name
@@ -59,15 +61,15 @@ body.page-profile
                                 ul.actor-list.cf#friends
                                     each item in user.friends
                                         mixin user_thumb(item)
-                            if false && user.friends.length > 10
-                                .add-filter#friends_more
-                                    .add-content.style-panel-action.rel.zmin
-                                        a(href='#show-actors', title='') показать всех
+                                if user.friends.length > 10
+                                    .add-filter#friends_more
+                                        .add-content.style-panel-action.rel.zmin
+                                            a(href='#show-actors', title='') показать всех
+                                        //
+                                           .filter-content
+                                        img.img-responsive(src=img_url + 'shd-big.png', alt='')
                                     //
-                                       .filter-content
-                                    img.img-responsive(src='images/shd-big.png', alt='')
-                                //
-                                   .filter-block
+                                       .filter-block
                             if user.genres && user.genres.length
                                 .vote
                                     h3 Любимые жанры
@@ -80,23 +82,25 @@ body.page-profile
                                                     .col-md-4.col-sm-2.col-xs-2.text-right
                                                         span=item.percent
                                                 .progress
-                                                    .progress-bar(role='progressbar', aria-valuenow=item.percent, aria-valuemin='0', aria-valuemax='100', style='width: ' + item.percent + '%;')
-                                                        span.sr-only #{item.percent}%
+                                                    - bar_width = 'width: ' + item.percent + '%;'
+                                                    .progress-bar(role='progressbar', aria-valuenow=item.percent, aria-valuemin='0', aria-valuemax='100', style=bar_width)
+                                                        span.sr-only #{Math.round(item.percent)}%
                         #toggle-col.col-md-9
                             h3 Лента активности
                             .tape-list#feed
                                 if user.feed
                                     each item in user.feed
                                         mixin feed_thumb(item)
-                            .add-filter#feed_more
-                                .add-content.style-panel-action.rel.zmin
-                                    a(href='#', title='') загрузить еще
+                            if user.feed.length >= 10
+                                .add-filter#feed_more
+                                    .add-content.style-panel-action.rel.zmin
+                                        a(href='#', title='') загрузить еще
+                                    //
+                                       .filter-content
+                                    img.img-responsive(src=img_url + 'shd-big.png', alt='')
                                 //
-                                   .filter-content
-                                img.img-responsive(src='static/img/shd-big.png', alt='')
-                            //
-                               .filter-block
-            if user.films
+                                   .filter-block
+            if user.films && user.films.length
                 section.brd-top
                     .container
                         h3 Подписан на фильмы
@@ -112,11 +116,11 @@ body.page-profile
                                     a(href='') показать еще
                                 //
                                    .filter-content
-                                img.img-responsive(src='static/img/shd-big.png', alt='')
+                                img.img-responsive(src=img_url + 'shd-big.png', alt='')
                             //
                                .filter-block
             if user.actors || user.directors
-                if user.actors
+                if user.actors && user.actors.length
                     section.people-block
                         .container
                             .sector-person
@@ -125,10 +129,12 @@ body.page-profile
                                     each item in user.actors
                                         .col-md-4.col-sm-4.col-xs-6
                                             .actor
-                                                a(href='/persons/' + item.id, title='')
-                                                    img.img-circle(src=item.photo || "static/img/nophoto.png", alt='')
+                                                - url_tmp = '/persons/' + item.id + '/'
+                                                a(href=url_tmp, title='')
+                                                    - photo_url = item.photo || nophoto_url
+                                                    img.img-circle(src=photo_url, alt='')
                                                     | #{item.name}
-                if user.actors
+                if user.directors && user.directors.length
                     section.people-block
                         .container
                             .sector-person
@@ -137,8 +143,10 @@ body.page-profile
                                     each item in user.directors
                                         .col-md-4.col-sm-4.col-xs-6
                                             .actor
-                                                a(href='/persons/' + item.id, title='')
-                                                    img.img-circle(src=item.photo || "static/img/nophoto.png", alt='')
+                                                - url_tmp = '/persons/' + item.id + '/'
+                                                a(href=url_tmp, title='')
+                                                    - photo_url = item.photo || nophoto_url
+                                                    img.img-circle(src=photo_url, alt='')
                                                     | #{item.name}
         include footer
         - delete user.films; delete user.actors; delete user.directors; delete user.feed; delete user.genres; delete user.friends
